[gd_scene load_steps=4 format=3 uid="uid://cihsqbdpoj7c7"]

[ext_resource type="Script" path="res://Scripts/camera.gd" id="1_b2s5a"]

[sub_resource type="PlaneMesh" id="PlaneMesh_apot3"]
size = Vector2(0.01, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cufyn"]
metallic = 1.0
roughness = 0.7
emission_enabled = true
emission = Color(1, 1, 1, 1)

[node name="Camera" type="Camera3D"]
current = true
fov = 60.0
script = ExtResource("1_b2s5a")

[node name="Marker3D1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Marker3D2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)

[node name="Marker3D3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1)
transparency = 0.9
mesh = SubResource("PlaneMesh_apot3")
surface_material_override/0 = SubResource("StandardMaterial3D_cufyn")
